<resources>
    <!--Strings tela Login-->
    <string name="app_name">Cadastro Clientes com DB</string>
    <string name="email">Email</string>
    <string name="digite_senha">Digite a senha de acesso...</string>
    <string name="digite_o_e_mail">Digite o e-mail cadastrado...</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="lembrar">Lembrar</string>
    <string name="politicaetermos"><![CDATA[Ler Política de Privacidade & Termos de Uso]]></string>
    <!--Strings tela Cadastro VIP-->
    <string name="confirme_sua_senha">Confirme sua Senha</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="salvar_e_continuar">SALVAR E CONTINUAR</string>
    <string name="cancelar">Cancelar</string>
    <string name="pessoa_f_sica">Pessoa Física</string>
    <string name="digite_seu_sobrenome">Digite seu sobrenome...</string>
    <string name="digite_seu_primeiro_nome">Digite seu primeiro nome...</string>
    <string name="cadastro_cliente">Cadastro</string>
    <!--Stings tela Cadastro Pessoa Jurídica -->
    <string name="pessoa_pj">Pessoa Jurídica</string>
    <string name="cnpj">CNPJ</string>
    <string name="digite_o_cnpj">Digite o CNPJ, somente os números...</string>
    <string name="raz_o_social">Razão Social</string>
    <string name="data_de_abertura_da_empresa">Data de Abertura da Empresa</string>
    <string name="mei">MEI</string>
    <string name="simples_nacional">Simples Nacional</string>
    <string name="salvarcontinuar">Salvar e Continuar</string>
    <string name="voltar">Voltar</string>
    <!-- String tela Cadastro Pessoa Física-->
    <string name="pessoa_fisica">Pessoa Física</string>
    <string name="nome_completo">Digite o Nome Completo...</string>
    <string name="CPF">CPF</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="politica_termos">Li e concordo com os termos de uso e política de privacidade</string>
    <string name="cadastar">CADASTRAR</string>
    <string name="credenciais_de_acesso">Credenciais de Acesso</string>
    <string name="senha">Senha</string>
    <string name="digite_o_cpf">Digite o CPF, somente os números...</string>
    <!--Tela Main -->
    <string name="meus_dados">Meus Dados</string>
    <string name="atualizar_meus_dados">Atualizar Meus Dados</string>
    <string name="excluir_conta">Excluir Conta</string>
    <string name="consultar_clientes">Consultar Clientes</string>
    <string name="sair">Sair</string>
    <string name="cliente">Cliente</string>
    <string name="acessar">ACESSAR</string>
    <string name="versao">Versão</string>
    <string name="voc_novo_por_aqui">Você é novo por aqui?</string>
    <string name="editar">Editar</string>
    <string name="salvar">Salvar</string>


</resources>