<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroClientePJ">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/appName"
        android:textColor="@color/black"
        android:textSize="26dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TxtPJ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/pessoa_pj"
        android:textColor="@color/blue"
        android:textSize="26dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCnpj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/cnpj"
        android:textColor="@color/green"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditCnpj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/digite_o_cnpj"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtRazaoSocial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/raz_o_social"
        android:textColor="@color/green"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="Razão Social igual ao CNPJ"
        android:inputType="text"/>

    <TextView
        android:id="@+id/txtDataAbertura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/data_de_abertura_da_empresa"
        android:textColor="@color/green"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editAbertura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="dd/mm/aaaa"
        android:inputType="date"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/ckSimplesNacional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:text="@string/simples_nacional" />

        <CheckBox
            android:id="@+id/ckMei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:text="@string/mei" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSalvarEContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/salvarcontinuar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/voltar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/cancelar" />
    </LinearLayout>

</LinearLayout>