<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PessoaJuridica">


    <TextView
        android:id="@+id/TxtPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/pessoa_fisica"
        android:textColor="@color/blue"
        android:textSize="26dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNomeCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/nome_completo"
        android:textColor="@color/green"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditNomeCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/nome_completo"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/CPF"
        android:textColor="@color/green"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="Digite o CPF..."
        android:inputType="number"/>

    <TextView
        android:id="@+id/txtDataNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/data_nascimento"
        android:textColor="@color/green"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editDataNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="dd/mm/aaaa"
        android:inputType="date"/>

    <Button
        android:id="@+id/btnSalvarEContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/salvarcontinuar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/voltar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/cancelar" />
    </LinearLayout>

</LinearLayout>