<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.CadastroNovoCliente">

    <!-- Cabeçalho -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_primaryContainer"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@mipmap/ic_launcher_round" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtNovoVip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:gravity="center_horizontal"
                        android:text="@string/cadastro_cliente"
                        android:textAppearance="@android:style/TextAppearance.Holo.Large"
                        android:textColor="@color/CustomColor1"
                        android:textSize="26sp"
                        android:textStyle="bold" />


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <!-- Formulário -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_primaryContainer"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPrimeiroNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/primeiro_nome"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textColor="@color/CustomColor1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPrimeiroNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/digite_seu_primeiro_nome"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtSobremone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/sobrenome"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textColor="@color/CustomColor1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editSobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/digite_seu_sobrenome"
                android:inputType="textPersonName" />
            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/email"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textColor="@color/CustomColor1"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/digite_o_e_mail"
                android:inputType="textEmailAddress" />
            <TextView
                android:id="@+id/txtCadastrarSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/senha"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textColor="@color/CustomColor1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/digite_senha"
                android:inputType="numberPassword" />

            <TextView
                android:id="@+id/txtConfirmaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/confirme_sua_senha"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textColor="@color/CustomColor1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editConfirmaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/digite_senha"
                android:inputType="numberPassword" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ckPessoaFisica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="pessoaFisica"
                    android:layout_marginLeft="16dp"
                    android:text="@string/pessoa_f_sica" />

                <CheckBox
                    android:id="@+id/ckPoliticaEPrivacidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/politica_termos" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <!-- Botões -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_primaryContainer"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSalvarEContinuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:text="@string/salvarcontinuar" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:text="@string/cancelar" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

