<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_primaryContainer"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rvPrimeiroNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/primeiro_nome"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textColor="@color/CustomColor1"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/rvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/email"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textColor="@color/CustomColor1"
                android:textSize="16dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ckPessoaFisica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="pessoaFisica"
                    android:layout_marginLeft="16dp"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/pessoa_f_sica" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</LinearLayout>